# protobuf-extension-sample

./: LICENSE  Makefile  pyproject.toml
protobuf_extension_sample/my_other_package/: sample.proto  sample.py  sample_pb2.py  sample_pb2.pyi
protobuf_extension_sample/my_sample_package/v1/: sample.proto  sample.py  sample_pb2.py  sample_pb2.pyi
protobuf_extension_sample/my_types_package/: datatype.proto  datatype_pb2.py  datatype_pb2.pyi
protobuf_extension_sample/my_types_package/v1/: datatype.proto  datatype_pb2.py  datatype_pb2.pyi
