[tool.poetry]
name = "protobuf-extension-sample"
version = "0.1.0"
description = ""
authors = ["Henry Skiba <henry.skiba@frgrisk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.64.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
